# backsnap

./: .gitignore  README.md  index.html  package-lock.json  package.json
packaging/arch/: 00-arclight-boot-guard.hook  00-arclight-pre.hook  50-arclight.rules  99-arclight-corsair.rules  99-arclight-nvme-rgb.rules  PKGBUILD  arclight-autostart.desktop  arclight-bin.install  arclight-boot-guard.sh  arclight-pacman-pre.sh  arclight.desktop  arclight.install  backsnap-autostart.desktop  backsnap.desktop  backsnap.install  build-local.sh
packaging/arch/pkg/backsnap-bin/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
packaging/arch/pkg/backsnap-bin/etc/pacman.d/hooks/: 00-backsnap-boot-guard.hook  00-backsnap-pre.hook
packaging/arch/pkg/backsnap-bin/etc/polkit-1/rules.d/: 50-backsnap.rules
packaging/arch/pkg/backsnap-bin/usr/lib/backsnap/: backsnap-boot-guard
packaging/arch/src/: 00-arclight-boot-guard.hook  00-arclight-pre.hook  00-backsnap-boot-guard.hook  00-backsnap-pre.hook  50-arclight.rules  50-backsnap.rules  99-arclight-corsair.rules  99-arclight-nvme-rgb.rules  99-backsnap-nvme-rgb.rules  arclight  arclight-autostart.desktop  arclight-boot-guard.sh  arclight-pacman-pre.sh  arclight.desktop  backsnap  backsnap-autostart.desktop  backsnap-boot-guard.sh  backsnap-pacman-pre.sh  backsnap.desktop
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json  test_disks2
src-tauri/capabilities/: default.json
src-tauri/examples/: test_ccxt.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  config.rs  crash  lib.rs  main.rs  sysfs.rs  sysmon.rs  util.rs  widget.rs
src-tauri/src/commands/: assistant.rs  boot.rs  boot_guard.rs  boot_patch.rs  cleanup.rs  config_cmd.rs  desktop_launcher.rs  efi.rs  fstab.rs  headless.rs  health.rs  helpers.rs  install.rs  intent.rs  lighting.rs  mod.rs  mount.rs  openrgb.rs  pi_remote.rs  pi_tent.rs  rollback.rs  scope.rs  snapshots.rs  sync_cmd.rs  timer.rs  tuning.rs  verify.rs
src-tauri/src/commands/assistant/: audio.rs  core.rs  listener.rs  voice_state.rs
src-tauri/src/commands/corsair/: ccxt.rs  hid.rs  mod.rs  nexus.rs  protocol.rs
src-tauri/src/config/: boot.rs  detect.rs  disk.rs  io.rs  mod.rs  types.rs
src-tauri/src/gateway/: assistant.rs  auth.rs  bubatz_proxy.rs  lighting.rs  mod.rs  system.rs
src-tauri/src/scanner/: artifacts.rs  discovery.rs  engine.rs  mod.rs  patterns.rs  types.rs  walker.rs
src-tauri/src/scripts/: apply-gpu-oc.sh.tmpl
src/components/: ErrorBoundary.tsx  SetupWizard.tsx  SplitView.tsx  ui.tsx
src/pages/: Assistant.tsx  BootGuard.tsx  Cleanup.tsx  Corsair.tsx  Dashboard.tsx  Disks.tsx  Lighting.tsx  Logs.tsx  Monitor.tsx  OpenRGB.tsx  PiRemote.tsx  Schedule.tsx  Settings.tsx  Snapshots.tsx  Sync.tsx  Tuning.tsx  Widget.tsx
